# py-dash-realestate

./: README.md  app.py  pyproject.toml
assets/: dashAgGridComponentFunctions.js  dashAgGridFunctions.js  dashExtensions_default.js  styles.css
pages/: real_estate.py
snippets/: map.py
src/: color.py  duck.py  finn.py  geo.py  geonorge.py  utils.py  virdi.py
